<resources>
    <string name="app_name" translatable="false">CV maker</string>
    <string name="email_order_custom">brij@flipkmart.com</string>
    <string name="email_subject">Order for Making CV/RESUME</string>
    <string name="email_body">Thanks for Contacting CVmaker\n\nTell me you want your CV/RESUME in 1 page or 2 page ?\n\nKindly email us sample of your resume so we will rewrite &amp; make your Custom CV/RESUME</string>

    <string name="content_description_open_drawer">Open Drawer</string>
    <string name="content_description_close_drawer">Closed Drawer</string>

    <string name="steps">Steps</string>

    <string name="navigation_order_email">Order Custom CV/RESUME</string>
    <string name="navigation_personal_info">Personal Info</string>
    <string name="navigation_essentials">Essentials</string>
    <string name="navigation_projects">Projects</string>
    <string name="navigation_education">Schools</string>
    <string name="navigation_experience">Experience</string>
    <string name="navigation_preview">Preview</string>
    <string name="navigation_privacy">Privacy Policy</string>

    <string name="action_add">Add</string>
    <string name="action_save">Save</string>
    <string name="action_print">Print</string>

    <string name="hint_project_name">Project Name</string>
    <string name="hint_detail">Detail</string>
    <string name="hint_subtitle">Subtitle</string>
    <string name="hint_description">Description</string>
    <string name="hint_company_name">Company Name</string>
    <string name="hint_location">Location</string>
    <string name="hint_job_title">Job Title</string>
    <string name="hint_name">Name</string>
    <string name="hint_address_line1">Address line1</string>
    <string name="hint_address_line2">Address line2</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_email">Email</string>
    <string name="hint_school_name">School Name</string>
    <string name="hint_degree">Degree</string>
    <string name="hint_skills">Skills</string>
    <string name="hint_languages">Languages</string>

    <string name="message_empty_list">This is empty list</string>

    <string name="symbol_separator" translatable="false">ㅡ</string>
    <string name="education">Education</string>


    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">DONE</string>

    <string name="slide_1_title">Welcome To CV maker</string>
    <string name="slide_1_desc">here you can make your CV !</string>

    <string name="slide_2_title">Simple and Easy</string>
    <string name="slide_2_desc">just few Steps to print your CV !</string>

    <string name="slide_3_title">Your CV is Ready </string>
    <string name="slide_4_desc">enjoy with your CV !</string>

    <string name="admob_app_id">ca-app-pub-6174814482689642~7223212260</string>
    <string name="admob_banner">ca-app-pub-6174814482689642/7409327011</string>
    <string name="admob_interstitial">ca-app-pub-6174814482689642/9472561187</string>
    <string name="admob_reward">ca-app-pub-6174814482689642/2412151201</string>

    <string name="admob_app_id_test">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_banner_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_interstitial_test">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_reward_test">ca-app-pub-3940256099942544/5224354917</string>

    <string name="order_custom_email">Order Custom CV</string>


</resources>
